# logmask-python-library

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  pyproject.toml
.claude/: settings.local.json
.github/: FUNDING.yml
docs/: README.md  logmask-buidl-spec-v1.md
plans/: phase1-scaffold-plan.md
reference/: agents01-syslog.txt  auditd-docker03-20260301170001.txt  auditd-proj-agents01-20260301010001.txt  auditd-proj-k8s02-20260301010001.txt  auditd-proj-k8s03-20260301010001.txt  chkrootkit-proj-agents01-20260301011001.txt  docker01-syslog.txt  lynis-proj-agents01-20260301010001.txt  lynis-proj-docker02-20260301010001.txt  lynis-proj-k8s02-20260301010001.txt  lynis-proj-pgsql02-20260301010001.txt  mon01-syslog.txt  node05_syslog.txt  rkhunter-proj-k8s01-20260301010501.txt  rkhunter-proj-k8s03-20260301010501.txt  rkhunter-proj-mongo01-20260301010501.txt  rkhunter-proj-pgsql02-20260301010501.txt
src/logmask/: __init__.py  __main__.py  cli.py  map_engine.py  models.py  replacer.py  scanner.py
src/logmask/parsers/: __init__.py  cidr.py  hostname.py  identity.py  ipv4.py  network.py
test_integration/: config.md  users.txt
test_integration/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/: config.md
test_integration/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/anonymized/: users.txt
tests/: conftest.py  test_map_engine.py  test_parsers.py  test_replacer.py  test_roundtrip.py
